// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CarPark Component 1`] = `
.c2 {
  position: relative;
  border-right: 1px solid #ccc;
  border-bottom: 1px solid #ccc;
  height: 50px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  position: relative;
  width: 250px;
  border-top: 1px solid #ccc;
  border-left: 1px solid #ccc;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    />
    <div
      className="c2"
    />
    <div
      className="c2"
    />
    <div
      className="c2"
    />
    <div
      className="c2"
    />
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    />
    <div
      className="c2"
    />
    <div
      className="c2"
    />
    <div
      className="c2"
    />
    <div
      className="c2"
    />
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    />
    <div
      className="c2"
    />
    <div
      className="c2"
    />
    <div
      className="c2"
    />
    <div
      className="c2"
    />
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    />
    <div
      className="c2"
    />
    <div
      className="c2"
    />
    <div
      className="c2"
    />
    <div
      className="c2"
    />
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    />
    <div
      className="c2"
    />
    <div
      className="c2"
    />
    <div
      className="c2"
    />
    <div
      className="c2"
    />
  </div>
</div>
`;

exports[`Cell Component 1`] = `
.c0 {
  position: relative;
  border-right: 1px solid #ccc;
  border-bottom: 1px solid #ccc;
  height: 50px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="c0"
/>
`;

exports[`Row Component 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="c0"
/>
`;
